--- a/config-server/src/main/resources/application.yaml
+++ b/config-server/src/main/resources/application.yaml
@@ -7,4 +7,7 @@ spring:
       name: config
       server:
         git:
-          uri:https://github.com/francislagueu
+          uri: https://github.com/francislagueu/tickets-spring
+        search-paths: config-files*
+  application:
+    name: config
